# vault

./: .gitignore  .gitleaks.toml  Caddyfile  README.md  compose.yaml  vault-backup.pub.asc
.githooks/: pre-commit
.github/workflows/: build.yml
cron/: Dockerfile  crontab
cron/scripts/: backup-job.sh  cve-check-job.sh  entrypoint.sh  health-job.sh  logrotate-job.sh  retention-job.sh
docs/: b2-setup-ko.md  emergency-ko.md  faq-ko.md  master-password-ko.md  onboarding-ko.md  runbook.md  stream-integration.md  tailscale-setup-ko.md  troubleshooting-ko.md
mcp/: Dockerfile  pyproject.toml  requirements.txt
mcp/vault_mcp/: __init__.py  auth.py  server.py
mcp/vault_mcp/core/: audit.py  bw.py
mcp/vault_mcp/tools/: admin.py  health.py  inventory.py  items.py
migration/: accounts.yaml  migrate-template.md
scripts/: b2-setup.sh  backup.sh  com.realchoice.tailscaled.plist  com.realchoice.vault-backup.plist  com.realchoice.vault-health.plist  cve-check.sh  diceware-en.sh  diceware-ko.sh  down.sh  emergency-lockdown.sh  emergency-restore.sh  finish-setup.sh  gpg-init.sh  migrate-status.sh  monthly-check.sh  precommit-secret-scan.sh  qr-server-url.sh  quarterly-drill.sh  restore-test.sh  sheet-to-vault.py  tailscale-setup.sh  up.sh  vault-health-emit.sh  vault-health.sh  vault-onboard-family.sh  vault-onboard.sh
scripts/test/: backup-roundtrip.sh  compose-validate.sh  smoke.sh
scripts/wordlists/: _build_ko_nouns.py  ko_nouns.txt
