[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-mcp"
version = "0.1.0"
description = "Vaultwarden 메타데이터·CRUD MCP (vault 라운드 11)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.4.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "starlette>=0.40",
]

[tool.setuptools]
packages = ["vault_mcp", "vault_mcp.core", "vault_mcp.tools"]
